--- a/templates/interactive-virtual-reality.html
+++ b/templates/interactive-virtual-reality.html
@@ -36,7 +36,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div id="includedContent" align="center">
+                    <div align="center">
+                        <iframe title="Virtual Tours" scrolling="no" src="https://www.3dfusionstudio.com/pano/panorama" allowfullscreen="" allowtransparency="true" frameborder="0"></iframe>
                     </div>
                 </div>
             </div>
