--- a/css/style.css
+++ b/css/style.css
@@ -1,52 +1,55 @@
-/*
-Theme Name: 3dFusionStudio
-Author: Admin
-*/
-
 html {
     scroll-behavior: smooth;
-  }
+}
 
-body{
+body {
     font-family: 'Raleway', sans-serif;
     color: #363636;
     font-weight: 400;
 }
 
-h1{
+
+h1 {
     text-align: center;
     font-size: 3.2rem;
     letter-spacing: .2em;
     line-height: normal;
     font-weight: 700;
     color: white;
-    text-transform: uppercase; 
-    text-shadow: rgba(0, 0, 0, 0.498039) -1px -1px 0px, rgba(0, 0, 0, 0.498039) -1px 1px 0px, rgba(0, 0, 0, 0.498039) 1px 1px 0px, rgba(0, 0, 0, 0.498039) 1px -1px 0px;
+    text-transform: uppercase;
+    text-shadow: rgba(0, 0, 0, 0.498039) -1px -1px 0px, 
+                 rgba(0, 0, 0, 0.498039) -1px 1px 0px, 
+                 rgba(0, 0, 0, 0.498039) 1px 1px 0px, 
+                 rgba(0, 0, 0, 0.498039) 1px -1px 0px;
 }
 
-h2{
+h2 {
     font-weight: 600;
     font-size: 25px;
     letter-spacing: .15em;
-    color:#605e5e;
+    color: #605e5e;
     margin-bottom: 30px;
-    
 }
 
-h3{
+h3 {
     font-weight: 600;
     font-size: 22px;
     letter-spacing: .15em;
-    color: white;   
+    color: white;
 }
 
-
-h5{
+h5 {
     color: white;
     padding-top: 50px;
     padding-bottom: 50px;
     font-size: 20px;
     letter-spacing: .2em;
+}
+
+p {
+    letter-spacing: .1em;
+    line-height: 1.6em;
+    font-size: 15px;
 }
 
 a {
@@ -56,16 +59,10 @@ a {
 
 a:hover {
     color: #444343;
-
 }
 
-p {
-    letter-spacing: .1em;
-    line-height: 1.6em;
-    font-size: 15px;   
-}
 
-section{
+section {
     margin-bottom: 100px;
 }
 
@@ -74,118 +71,191 @@ img {
     max-height: 100%;
 }
 
-
 hr {
-margin-top: 0;
-  margin-bottom: 100px;
-  opacity: .05;
+    margin-top: 0;
+    margin-bottom: 100px;
+    opacity: .05;
 }
 
-input{
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    border-radius: 0;
-    outline: none;
+.container {
+    max-width: 960px;
 }
 
-textarea{
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    border-radius: 0;
-    outline: none;
-    overflow:auto;
-}
-
-.btn{
-    height: 40px;
-    width: 122px;
-    padding-left: 0;
-    padding-right: 0;
-   
-}
-
-.navbar {
-    min-height: 80px;
-  }
-  
-.navbar-brand{
-    font-size: 1.6em;
-    font-weight: 400;
-    color: #363636;
-  }
-
-.navbar-light .navbar-brand {
-    color: #363636;
-}
-
-.nav-link{
-    text-transform: uppercase;
-  }
-
-
-.navbar-light .navbar-nav .nav-link {
-    font-size: 14px;
-    color: #363636;}
-
-
-.navbar-light .navbar-nav .nav-link:hover{
-    color: #7A7474;}
-
-.navbar-expand-md .navbar-nav .nav-link{
-    padding-left: 1rem;
-    padding-bottom: 4px;
-}
-
-
-.container{
-max-width: 960px;
-}
-
-.container-fluid{
+.container-fluid {
     padding-right: 5rem;
     padding-left: 5rem;
 }
 
-.bgimage {
-    width:100%;
-    height:90vh;
-    background: url('img/cover_background.jpg');
 
-    background-position: center;
-    background-size:cover;
-    background-attachment: fixed;
-  }
-
-
-.halfhead{
-    height: 400px;
-    width:100%;
-    margin-top:80px;
+.navbar {
+    min-height: 80px;
+    transition: all 0.3s ease;
+    z-index: 3;
 }
 
 
+.bgimage + header .navbar-brand,
+.bgimage + header .navbar-nav .nav-link {
+    color: white !important;
+}
 
-.btn-transparent{
+.bgimage + header .navbar-nav .nav-link:hover {
+    color: rgba(255, 255, 255, 0.8) !important;
+}
+
+
+.navbar-brand {
+    font-size: 1.6em;
+    font-weight: 600;
+    color: #363636 !important;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    font-size: 14px;
+    color: #363636 !important;
+    text-transform: uppercase;
+    padding-left: 1rem;
+    padding-bottom: 4px;
+}
+
+.navbar-light .navbar-nav .nav-link:hover {
+    color: #7A7474 !important;
+}
+
+
+.navbar.scrolled {
+    background-color: white !important;
+}
+
+.navbar.scrolled .navbar-brand,
+.navbar.scrolled .navbar-nav .nav-link {
+    color: #363636 !important;
+}
+
+.navbar.scrolled .navbar-nav .nav-link:hover {
+    color: #7A7474 !important;
+}
+
+
+.navbar-light .navbar-toggler {
+    border-color: rgba(255,255,255,0.5);
+}
+
+.navbar-light .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.9%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.navbar.scrolled .navbar-toggler {
+    border-color: rgba(0,0,0,0.1);
+}
+
+.navbar.scrolled .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+
+.bgimage {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+}
+
+.halfhead {
+    width: 100%;
+    height: 50vh;
+    position: relative;
+    overflow: hidden;
+    margin-top: 80px;
+}
+
+.hero-content {
+    position: relative;
+    height: 100%;
+    z-index: 2;
+}
+
+
+#heroCarousel {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.carousel-inner, 
+.carousel-item {
+    height: 100%;
+}
+
+.carousel-image {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+    z-index: 3;
+    width: 10%;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.bgimage:hover .carousel-control-prev,
+.bgimage:hover .carousel-control-next {
+    opacity: 1;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    width: 40px;
+    height: 40px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+    background-size: 50%;
+}
+
+
+.gradient-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, 
+        rgba(0, 0, 0, 0.6) 0%, 
+        rgba(0, 0, 0, 0) 20%, 
+        rgba(0, 0, 0, 0) 70%,
+        rgba(0, 0, 0, 0.8) 100%);
+    pointer-events: none;
+    z-index: 1;
+}
+
+
+.btn {
+    height: 40px;
+    width: 122px;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.btn-transparent {
     color: white;
     border-width: 2px;
     border-radius: 2px;
     border-color: white;
     margin-right: 7px;
-
 }
 
-.btn-transparent:hover{
+.btn-transparent:hover {
     background: rgba(255, 255, 255, 1);
     border: 2px solid rgba(255, 255, 255, 0.80);
 }
 
-a.btn-transparent:focus{
-    outline:0;
-}
-
-.btn-white{
+.btn-white {
     border-width: 0;
     border-radius: 2px;
     border-color: white;
@@ -193,83 +263,89 @@ a.btn-transparent:focus{
     background: rgba(255, 255, 255, 0.80);
 }
 
-.btn-white:hover{
+.btn-white:hover {
     background: rgba(255, 255, 255, 0.60);
 }
 
-.btn-white:focus{
-    outline:0;
+.btn-transparent-black {
+    color: #363636;
+    border-color: black;
+    margin-bottom: 10px;
 }
 
-.cardinfo{
-    padding-top: 15px;
-    padding-bottom: 50px;
-    padding-left: 30px;
-    padding-right: 30px;
+.btn-transparent-black:hover {
+    color: white;
+    background: #323232;
+    border: 2px solid #323232;
+}
+
+
+.cardinfo {
+    padding: 15px 30px 50px;
     margin-bottom: 15px;
-
 }
 
-.cardinfo p{
+.cardinfo p {
     margin-bottom: 4px;
 }
 
-.plarge{
+.plarge {
     font-size: 17px;
 }
 
-.gutters{
+
+.gutters {
     padding: 4px;
 }
 
-.gutters:hover{
+.gutters:hover,
+.no-gutters:hover {
     opacity: .8;
 }
 
-.no-gutters{
+.no-gutters {
     padding-right: 0;
     padding-left: 0;
 }
 
-.no-gutters:hover{
-    opacity: .8;
-}
 
-.dark-bg{
+.dark-bg {
     background-color: #323232;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding: 40px 0;
 }
 
 
-.form-elemnt{
+.form-elemnt {
     margin-bottom: 50px;
 }
 
-.form-elemnt input{
+.form-elemnt input,
+.form-elemnt textarea {
     width: 100%;
+    padding: 3px 3px 3px 7px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-radius: 0;
+    outline: none;
+}
+
+.form-elemnt input {
     height: 40px;
-    padding: 3px 3px 3px 7px;
 }
 
-.form-elemnt input::placeholder{
-    color: rgba(54, 54, 54, 0.4)
-}
-
-.form-elemnt textarea{
-    width: 100%;
-    padding: 3px 3px 3px 7px;
-    resize: none;
+.form-elemnt textarea {
     height: 100px;
+    resize: none;
     overflow-y: auto;
 }
-.form-elemnt textarea::placeholder{
-    width: 100%;
-    padding: 3px 3px 3px 7px;
-    color: rgba(54, 54, 54, 0.4)
+
+.form-elemnt input::placeholder,
+.form-elemnt textarea::placeholder {
+    color: rgba(54, 54, 54, 0.4);
 }
 
-.form-elemnt button{
+.form-elemnt button {
     width: 100%;
     height: 40px;
     padding: 3px 3px 3px 7px;
@@ -280,55 +356,96 @@ a.btn-transparent:focus{
     color: white;
 }
 
-.form-elemnt button:hover{
+.form-elemnt button:hover {
     background-color: #8763f3;
 }
 
-.no-padding{
-    padding-left: 0;
-    padding-right: 0;
-}
 
-.social li{
+.social li {
     display: inline-block;
     margin-right: 10px;
 }
 
-.mb{
+.mb {
     margin-bottom: 40px;
 }
-.ulStyle-none{
+
+.ulStyle-none {
     list-style: none;
     text-decoration: none;
+    padding-left: 0;
 }
 
-
-.right{
+.right {
     margin-right: 5px;
 }
 
-.column {
-  display: none; /* Hide columns by default */
-}
-
-.show {
-  display: block;
-}
-
-.btn-transparent-black{
-    color: #363636;
-    border-color: black;
-    margin-bottom:10px;
+footer .navbar-brand {
+    color: #363636 !important;
 }
 
 
+.scroll-indicator {
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 3;
+    cursor: pointer;
+    animation: bounce 2s infinite;
+}
 
-.btn-transparent-black:hover{
+.scroll-indicator .fa {
     color: white;
-    background: #323232;
-    border: 2px solid #323232;
+    font-size: 30px;
+    opacity: 0.8;
 }
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0) translateX(-50%);
+    }
+    40% {
+        transform: translateY(-15px) translateX(-50%);
+    }
+    60% {
+        transform: translateY(-7px) translateX(-50%);
+    }
+}
+
 
 .g-recaptcha {
     display: inline-block;
+}
+
+
+@media (max-width: 768px) {
+    .container-fluid {
+        padding-right: 1rem;
+        padding-left: 1rem;
+    }
+    
+    h1 {
+        font-size: 2.5rem;
+    }
+    
+    .carousel-control-prev,
+    .carousel-control-next {
+        width: 15%;
+    }
+}
+
+@media (max-width: 576px) {
+    .btn {
+        width: 100px;
+    }
+    
+    h1 {
+        font-size: 2rem;
+    }
+    
+    h5 {
+        font-size: 16px;
+        padding: 30px 0;
+    }
 }
